trunk/Archive2/7a/af971031e3aa26/output
+ g++-4.9 -std=c++98 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:4:12: error: cannot declare reference to 'IREF {aka int&}'
     IREF & c2 = c;
            ^
main.cpp:4:12: warning: unused variable 'c2' [-Wunused-variable]
