trunk/Archive2/7a/af971031e3aa26/main.cpp
int main(){
    int c = 0;
    typedef int & IREF;
    IREF & c2 = c;
}
